loading simulation height fix on mobile

--- a/css/default.css
+++ b/css/default.css
@@ -83,6 +83,7 @@ hr {
   z-index: 999999;
   background-color: white;
   width: 100%;
+  min-height: 100%;
   height: 100vh;
   position: fixed;
   animation: 3s forwards ease-out loadingFade;
